--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
 
 <form action="/action_page.php">
   <select name="cars">
-    <option value="volvo">Volvo</option>
-    <option value="saab">Saab</option>
-    <option value="fiat">Fiat</option>
-    <option value="audi">Audi</option>
+    {{candy}}
   </select>
   <br><br>
   <input type="submit">
